--- a/linear.ipynb
+++ b/linear.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "source": [
     "````\n",
-    "An error has occurred \"Singular matrix\"\n",
+    "An error has occurred \"Singular matrix\"\n cannot solve a system of equations using a singular matrix (it may have no solution or multiple solutions, but in any case no unique solution)" ,
     "````"
    ]
   },
